kubernetes/observability/talos-monitoring/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: talos-monitoring
  namespace: talos-monitoring
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-talos-monitoring
  hostnames:
    - "talos-monitoring.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: talos-monitoring
          port: 8080
